<resources>
    <string name="app_name">Jetpack Android</string>

    <string name="homefragment_text">Home Fragment</string>
    <string name="fragment_home_title">Title</string>
    <string name="fragment_home_details">Click to see more details or Long click to update the select item</string>

    <string name="detail_fragment_title">Detail</string>
    <string name="fragment_detail_title">Title</string>
    <string name="fragment_detail_ID">ID image</string>
    <string name="content_description_image">Image describes the status of the application</string>
    <string name="image_contentDescription_details">Image of the detail clicked</string>

    <string name="register_fragment_title">Register</string>
    <string name="fragment_register_title">Title</string>
    <string name="fragment_register_url">Url</string>
    <string name="fragment_register_thumb">Thumb Url</string>
    <string name="fragment_register_albumId">Album ID</string>
    <string name="fragment_register_button_send">Send</string>

    <string name="update_fragment_title">Update</string>
    <string name="fragment_update_button_send">Update</string>

    <string name="id_menu_show_rules">Show the rules</string>
    <string name="id_menu_about">About</string>
    <string name="id_menu_add">Add new item</string>

    <string name="rules_fragment_title">Rules</string>
    <string name="fragment_rules_title_rules">Rules of the program</string>

    <string name="about_fragment_title">About</string>
    <string name="fragment_about_title">About the program</string>
    <string name="button_delete_title">Delete</string>
    <string name="navdrawer_menu_title">Example item drawer</string>
    <string name="content_description_logo">Photo log of the navdrawer</string>

    <string name="content_description_splash">Image of the splash Screen</string>

</resources>
