<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myViewModel"
            type="com.example.jetpackandroid.ui.update.UpdateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment">

        <Button
            android:id="@+id/postButton"
            style="@style/StyleButtonSended"
            android:onClick="@{() -> myViewModel.updateButton()}"
            android:text="@string/fragment_update_button_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAlbumId" />

        <EditText
            android:id="@+id/editTextUrl"
            style="@style/EditText"
            android:autofillHints="no"
            android:backgroundTint="@color/colorLightGrey"
            android:hint="@string/fragment_register_url"
            android:inputType="textUri"
            android:text="@={myViewModel.inputUrl}"
            app:layout_constraintBottom_toTopOf="@+id/editTextThumbUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editTextThumbUrl"
            style="@style/EditText"
            android:backgroundTint="@color/colorLightGrey"
            android:hint="@string/fragment_register_thumb"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:text="@={myViewModel.inputThumbUrl}"
            app:layout_constraintBottom_toTopOf="@+id/editTextAlbumId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUrl"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/editTextAlbumId"
            style="@style/EditText"
            android:backgroundTint="@color/colorLightGrey"
            android:hint="@string/fragment_register_albumId"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={myViewModel.inputAlbumId}"
            app:layout_constraintBottom_toTopOf="@+id/postButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextThumbUrl"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/editTextTitle"
            style="@style/EditText"
            android:backgroundTint="@color/colorLightGrey"
            android:hint="@string/fragment_register_title"
            android:importantForAutofill="no"
            android:inputType="none|textPersonName|text"
            android:text="@={myViewModel.inputTitle}"
            app:layout_constraintBottom_toTopOf="@+id/editTextUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>