<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.jetpackandroid.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        style="@style/ConstraintMatchParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPhotos"
            style="@style/RecyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            app:listData="@{viewModel.properties}"
            tools:listitem="@layout/list_item" />

        <ImageView
            style="@style/Image_status"
            android:contentDescription="@string/content_description_image"
            app:homeApiStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle" />

        <TextView
            android:id="@+id/title"
            style="@style/TextViewTheme_title"
            android:text="@string/fragment_home_title"
            app:layout_constraintBottom_toTopOf="@+id/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/TextViewTheme_subtitle"
            android:text="@string/fragment_home_details"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewPhotos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>